- wxGridCellEditor::EndEdit() signature has changed and it was split in two
  functions, one still called EndEdit() and ApplyEdit(). See the documentation
  of the new functions for more details about how grid editors should be
  written now.

- wxEVT_GRID_CELL_CHANGE event renamed to wxEVT_GRID_CELL_CHANGED and shouldn't
  be vetoed any more, use the new wxEVT_GRID_CELL_CHANGING event to do it.

- Global wxPendingEvents and wxPendingEventsLocker objects were removed.
  You may use wxEventLoopBase::SuspendProcessingOfPendingEvents instead of
  locking wxPendingEventsLocker now.


Deprecated methods and their replacements
-----------------------------------------

- wxCreateGreyedImage() deprecated, use wxImage::ConvertToGreyscale() instead.
- wxString::GetWriteBuf() and UngetWriteBuf() deprecated, using wxStringBuffer
  or wxStringBufferLength instead.
- wxDIRCTRL_SHOW_FILTERS style is deprecated, filters are alwsys shown if
  specified so this style should simply be removed
- wxDocManager::MakeDefaultName() replaced by MakeNewDocumentName() and
  wxDocument::GetPrintableName() with GetUserReadableName() which are simpler
  to use
- wxXmlProperty class was renamed to wxXmlAttribute in order to use standard
  terminology. Corresponding wxXmlNode methods were renamed to use
  "Attribute" instead of "Property" or "Prop" in their names.
- wxConnection::OnExecute() is not formally deprecated yet but new code should
  use simpler OnExec() version which is called with wxString argument
- Various wxMenuItem methods were deprecated in favour of more consisently
  named new versions:
    . GetLabel() is now GetItemLabelText()
    . GetText() is not GetItemLabel()
    . GetLabelFromText() is now GetLabelText()
    . SetText() is now SetItemLabel()
- wxBrush's, wxPen's SetStyle() and GetStyle() as well as the wxBrush/wxPen
  ctor now take respectively a wxBrushStyle and a wxPenStyle value instead of a
  plain "int style"; use the new wxBrush/wxPen style names (wxBRUSHSTYLE_XXX